--- a/src/components/styles/ProductCard.module.css
+++ b/src/components/styles/ProductCard.module.css
@@ -9,7 +9,7 @@
 .cardCotainer{
     width: 15%;
     margin: 10px;
-    padding: 10px;
+    /* padding: 10px; */
 }
 .link{
     text-decoration: none;
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
