--- a/src/components/styles/ProductCard.module.css
+++ b/src/components/styles/ProductCard.module.css
@@ -1,13 +1,14 @@
 .cardsCotainer{
     max-width: 1520px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
     width: 100%;
 }
 .cardCotainer{
-    width: 15%;
+    width: 25%;
     margin: 10px;
     /* padding: 10px; */
 }
@@ -25,7 +26,8 @@
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
-    width: 100%;
+    width: 300px;
+    height: 520px;
 }
 .img{
     width: 100%;
