conditional render y alertas en btns para proximamente

--- a/src/components/styles/ProductCard.module.css
+++ b/src/components/styles/ProductCard.module.css
@@ -8,8 +8,8 @@
     width: 100%;
 }
 .cardCotainer{
-    width: 25%;
-    margin: 10px;
+    width: 280px;
+    margin: 25px;
     /* padding: 10px; */
 }
 .link{
