--- a/src/components/styles/nav.module.css
+++ b/src/components/styles/nav.module.css
@@ -59,6 +59,7 @@
     justify-content: center;
     align-items: center;
     margin: 0% 1%;
+    cursor: pointer;
 }
 .navIcons{
     height: 30px;
