--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,1 @@
-//Se importan las hojas de estilos que son modulos
-//Importando los estilos de ADMIN 
-// @import "../admin/scss/adminMain.scss";
-// @import "./mainContent/productCard";
+@import "nav/nav";
