adding styles cart and creation of orders

--- a/src/scss/nav/_categories.scss
+++ b/src/scss/nav/_categories.scss
@@ -14,7 +14,7 @@
         margin: 1%;
         border-radius: 16px;
         cursor: pointer;
-        background: #b1d8de;
+        background: v.$LightBlue;
     }
 
     &>.categories__child {
