--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 *,
 body,
 div,
@@ -24,7 +26,7 @@ th,
 td {
     padding: 0;
     margin: 0;
-    font-family: "Oswald", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -82,5 +84,8 @@ a {
     text-decoration: none;
 }
 
+@import "./mixins/mixins";
 @import "nav/nav";
-@import "./mainContent/mainContent"
+@import "./mainContent/mainContent";
+@import "./cart/cart";
+@import "./login/login";
