--- a/src/scss/mainContent/_productCard.scss
+++ b/src/scss/mainContent/_productCard.scss
@@ -1,4 +1,5 @@
 @use "../variables" as v;
+@import "../mixins/mixins";
 
 .productCard {
     width: 300px;
@@ -15,6 +16,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 96%;
+        text-decoration: none;
+        color: v.$Primary;
 
         .productCard__img {
             height: 40vh;
@@ -22,5 +26,44 @@
             border-radius: 16px;
             object-fit: cover;
         }
+
+        .productCard__name {
+            width: 100%;
+            text-align: center;
+            overflow: hidden;
+            white-space: nowrap;
+            /* Don't forget this one */
+            text-overflow: ellipsis;
+        }
+
+
     }
+
+    .productCard__addToCart {
+        display: flex;
+        align-items: center;
+        width: 61%;
+        justify-content: space-evenly;
+
+
+        .productCard__addToCart--- {
+            @include btn($width: 10%);
+            font-size: 2rem;
+        }
+
+        .productCard__addToCart--addition {
+            @include btn($width: 40%);
+            font-size: 1.2rem;
+        }
+
+        .productCard__addToCart--count {
+            font-size: 1.2rem;
+        }
+
+        .productCard__addToCart--add {
+            @include btn($width: 30%);
+            font-size: 1.2rem;
+        }
+    }
+
 }
