--- a/src/scss/cart/_orderForm.scss
+++ b/src/scss/cart/_orderForm.scss
@@ -1,11 +1,11 @@
+@import "./orderExist";
+
 .orderForm__container {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     text-align: center;
-    height: 80vh;
 
     &>p {
         font-size: 2rem;
@@ -15,13 +15,15 @@
 
     &>form {
         width: 40%;
-        padding: 2%;
+        padding: 1%;
         border: 1px solid black;
         border-radius: 16px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+        margin: 2%;
+        min-height: 80vh;
 
         &>button {
             @include btn(40%);
@@ -34,6 +36,19 @@
             margin: 3%;
             border-radius: 16px;
             height: 10vh;
+        }
+
+        &>input {
+            width: 80%;
+            padding: 2%;
+            margin: 1%;
+            border-radius: 16px;
+            height: 2vh;
+            border: 0.5px solid black;
+
+            &:focus {
+                outline: none;
+            }
         }
     }
 }
