--- a/src/scss/nav/_categories.scss
+++ b/src/scss/nav/_categories.scss
@@ -15,6 +15,7 @@
         border-radius: 16px;
         cursor: pointer;
         background: v.$LightBlue;
+        padding-left:  4%;
     }
 
     &>.categories__child {
