finally rendering the address

--- a/src/scss/cart/_checkout.scss
+++ b/src/scss/cart/_checkout.scss
@@ -1,4 +1,6 @@
 @use "../variables" as v;
+@import "./checkout/orderSummary";
+@import "./checkout/orderAddress";
 
 .checkoutContainer {
     height: 100vh;
