--- a/src/scss/cart/_checkout.scss
+++ b/src/scss/cart/_checkout.scss
@@ -3,15 +3,24 @@
 @import "./checkout/orderAddress";
 
 .checkoutContainer {
-    height: 100vh;
+    min-height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
     .checkoutContainer__loading {
         font-size: 2rem;
+
+    }
+
+    .checkout__info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
 
     }
 
