adding the redirect render

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -89,4 +89,5 @@ a {
 @import "./mainContent/mainContent";
 @import "./cart/cart";
 @import "./login/login";
+@import "./order/orders";
 @import "./toast";
