--- a/src/scss/nav/_nav.scss
+++ b/src/scss/nav/_nav.scss
@@ -1,10 +1,10 @@
+@use "../variables" as v;
 @import "./searchBar";
 @import "./categories";
 @import "./orderin";
-
 .nav {
     width: 100%;
-    background-color: black;
+    background-color: v.$Primary;
     display: flex;
     justify-content: space-between;
     align-items: center;
