Render of reviews and points

--- a/src/scss/mainContent/_product.scss
+++ b/src/scss/mainContent/_product.scss
@@ -2,7 +2,7 @@
 @import "./productCard";
 @import "./productDetails";
 @import "./productAdd";
-
+@import "./reviews/reviews";
 
 .products {
     width: 80%;
