--- a/src/scss/mainContent/_productCard.scss
+++ b/src/scss/mainContent/_productCard.scss
@@ -26,7 +26,7 @@
         }
 
         .productCard__img {
-            height: 40vh;
+            max-height: 30vh;
             max-width: 100%;
             border-radius: 16px;
             object-fit: cover;
