--- a/src/scss/mainContent/reviews/_reviews.scss
+++ b/src/scss/mainContent/reviews/_reviews.scss
@@ -60,6 +60,13 @@
                     background-color: v.$Secondary;
 
                 }
+
+                &::-moz-progress-bar {
+                    border-radius: 16px;
+                    background-color: v.$Primary;
+
+                }
+
             }
 
             &>div {
