--- a/src/scss/mainContent/_productDetails.scss
+++ b/src/scss/mainContent/_productDetails.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
 
     .productDetail__details {
-        margin: 5%;
+        margin: 5% 5% 2% 5%;
         padding: 5%;
         display: flex;
         border: 1px v.$Primary solid;
