--- a/src/scss/cart/_orderExist.scss
+++ b/src/scss/cart/_orderExist.scss
@@ -1,3 +1,5 @@
+@use "../variables" as v;
+
 .order__exist {
     width: 40%;
     margin: 2%;
@@ -14,42 +16,21 @@
         border-radius: 16px;
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
-        justify-content: center;
+        align-items: center;
+        justify-content: space-around;
         margin: 2%;
         flex-wrap: wrap;
         border: 1px solid black;
 
         .radioContainer {
             align-self: center;
+            accent-color: v.$Secondary;
+        }
 
-            &:after {
-                width: 15px;
-                height: 15px;
-                border-radius: 15px;
-                top: -2px;
-                left: -1px;
-                position: relative;
-                background-color: #d1d3d1;
-                content: '';
-                display: inline-block;
-                visibility: visible;
-                border: 2px solid white;
-            }
+        .direction {
+            width: 80%;
 
-            &:checked:after {
-                width: 15px;
-                height: 15px;
-                border-radius: 15px;
-                top: -2px;
-                left: -1px;
-                position: relative;
-                background-color: #ffa500;
-                content: '';
-                display: inline-block;
-                visibility: visible;
-                border: 2px solid white;
-            }
+
         }
     }
 }
