--- a/src/scss/nav/_nav.scss
+++ b/src/scss/nav/_nav.scss
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    position: sticky;
+    top: 0px;
     .nav__logo {
         margin: 0.5%;
         margin-left: 1%;
