--- a/src/scss/nav/_nav.scss
+++ b/src/scss/nav/_nav.scss
@@ -2,6 +2,7 @@
 @import "./searchBar";
 @import "./categories";
 @import "./orderin";
+
 .nav {
     width: 100%;
     background-color: v.$Primary;
@@ -50,6 +51,7 @@
                     text-align: center;
 
                 }
+
             }
 
             .nav__loginCart--cart-img {
@@ -65,6 +67,51 @@
 
             .nav__loginCart--login-img {
                 height: 5vh;
+            }
+
+            .nav__loginCart--login-render {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+
+                &>div {
+                    display: flex;
+                    position: absolute;
+                    top: 10px;
+                    width: 200%;
+                    justify-content: space-around;
+                    align-items: center;
+                    flex-direction: column;
+                    height: 10vh;
+
+                    .nav__loginCart--login-logout {
+                        width: 100%;
+                        border-radius: 16px;
+                        background-color: v.$Primary;
+                        transition: background-color 0.3s;
+                        cursor: default;
+                        user-select: none;
+
+                        &:hover {
+                            background-color: v.$Secondary;
+                        }
+                    }
+
+                    .nav__loginCart--login-profile {
+                        width: 100%;
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 16px;
+                        background-color: v.$Primary;
+
+                    }
+                }
+            }
+
+            .nav__loginCart--login-hidden {
+                display: none;
             }
         }
     }
