--- a/src/scss/mainContent/_productCard.scss
+++ b/src/scss/mainContent/_productCard.scss
@@ -40,12 +40,22 @@
             /* Don't forget this one */
             text-overflow: ellipsis;
         }
-
-
     }
 
-
+    .wished {
+        color: v.$Secondary;
+        align-self: flex-end;
+        padding-right: 4%;
+    }
+    
+    .notWished {
+        color: v.$Primary;
+        align-self: flex-end;
+        padding-right: 4%;
+    }
 }
+
+
 
 @-webkit-keyframes vibrate-1 {
     0% {
