--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -92,4 +92,4 @@ a {
 @import "./order/orders";
 @import "./toast";
 @import "./faq/faqs";
-@import "./reviews/form";
+@import "./mainContent/reviews/reviews";
