--- a/src/scss/mainContent/_productCard.scss
+++ b/src/scss/mainContent/_productCard.scss
@@ -2,7 +2,8 @@
 @import "../mixins/mixins";
 
 .productCard {
-    width: 300px;
+    min-width: 300px;
+    max-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
