--- a/src/scss/faq/_faqs.scss
+++ b/src/scss/faq/_faqs.scss
@@ -12,6 +12,11 @@
         border: 3px solid #17252A;
         border-radius: 1%;
         align-items: center;
+        justify-content: flex-start;
+
+        .faqs--container__desc {
+            margin-left: 5vw;
+        }
     }
 
     h1 {
