--- a/src/scss/mainContent/_highLight.scss
+++ b/src/scss/mainContent/_highLight.scss
@@ -7,14 +7,33 @@
 
     h2 {
         font-weight: bold;
+        font-size: 24px;
+        font-style: italic;
+        // text-decoration: underline;
+        text-transform: uppercase;
+        margin-top: 2%;
     }
 
     .highlight--prods__container {
         display: flex;
+        flex-wrap: nowrap;
         align-items: center;
         margin: 1%;
-        width: 90vw;
-        justify-content: center;
+        min-width: 60%;
+        max-width: 60%;
+        justify-content: space-between;
+
+        .react--paginate__der {
+            color: #17252A;
+            float: right;
+            border: none;
+            background: none;
+
+            :active {
+                -webkit-animation: heartbeat 1s ease-in-out infinite both;
+                animation: heartbeat 1s ease-in-out infinite both;
+            }
+        }
 
     }
 
@@ -58,16 +77,14 @@
         }
     }
 }
-.react--paginate__der {
-    color: #17252A;
-    display: flex;
-    align-items: center;
-}
 
 .highlight--card {
     display: flex;
     align-items: center;
     justify-content: center;
+    max-height: 20vh;
+    min-height: 30vh;
+    margin: 3%;
 
     a {
         display: flex;
@@ -75,10 +92,83 @@
         align-items: center;
         text-decoration: none;
         color: v.$Primary;
+        font-weight: bold;
     }
 
     img {
-        max-width: 20vw;
         max-height: 30vh;
+        max-width: 100%;
+        border-radius: 16px;
+        object-fit: cover;
     }
 }
+
+
+@-webkit-keyframes heartbeat {
+    from {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: center center;
+              transform-origin: center center;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    10% {
+      -webkit-transform: scale(0.91);
+              transform: scale(0.91);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    17% {
+      -webkit-transform: scale(0.98);
+              transform: scale(0.98);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    33% {
+      -webkit-transform: scale(0.87);
+              transform: scale(0.87);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    45% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  @keyframes heartbeat {
+    from {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: center center;
+              transform-origin: center center;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    10% {
+      -webkit-transform: scale(0.91);
+              transform: scale(0.91);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    17% {
+      -webkit-transform: scale(0.98);
+              transform: scale(0.98);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    33% {
+      -webkit-transform: scale(0.87);
+              transform: scale(0.87);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    45% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
