--- a/src/scss/login/_login.scss
+++ b/src/scss/login/_login.scss
@@ -1,5 +1,7 @@
 @use "../variables" as v;
 @import "./loginGoogle";
+@import "./profile";
+@import "./changeAddress";
 
 .loginForm {
     display: flex;
@@ -27,7 +29,7 @@
         justify-content: space-around;
 
         .createUser__btn {
-            @include btn(40%);
+            @include btn();
             width: 20%;
         }
 
@@ -54,7 +56,7 @@
             justify-content: space-around;
 
             .loginForm__login--btn {
-                @include btn(40%);
+                @include btn();
                 width: 40%;
             }
 
@@ -62,7 +64,7 @@
                 width: 40%;
 
                 .loginForm__singup--btn {
-                    @include btn(100%);
+                    @include btn();
                     width: 100%;
                 }
             }
