--- a/src/scss/login/_loginGoogle.scss
+++ b/src/scss/login/_loginGoogle.scss
@@ -21,7 +21,7 @@
             width: 60%;
 
             .googleFormSuccess--btn {
-                @include btn(100%);
+                @include btn();
                 width: 100%;
             }
         }
