--- a/src/scss/cart/_checkout.scss
+++ b/src/scss/cart/_checkout.scss
@@ -32,7 +32,7 @@
         &>button {
             font-size: 1.2rem;
             width: 50%;
-            @include btn(100%);
+            @include btn();
             text-align: center;
 
         }
