--- a/src/scss/cart/_orderForm.scss
+++ b/src/scss/cart/_orderForm.scss
@@ -26,7 +26,7 @@
         min-height: 80vh;
 
         &>button {
-            @include btn(40%);
+            @include btn();
             width: 50%;
         }
 
