styling and commenting issues of change name

--- a/src/scss/login/_login.scss
+++ b/src/scss/login/_login.scss
@@ -2,6 +2,7 @@
 @import "./loginGoogle";
 @import "./profile";
 @import "./changeAddress";
+@import "./changepass";
 
 .loginForm {
     display: flex;
