--- a/src/scss/login/_login.scss
+++ b/src/scss/login/_login.scss
@@ -3,6 +3,9 @@
 @import "./profile";
 @import "./changeAddress";
 
+@import "./changepass";
+
+
 .loginForm {
     display: flex;
     flex-direction: column;
