--- a/src/scss/faq/_faqs.scss
+++ b/src/scss/faq/_faqs.scss
@@ -9,8 +9,8 @@
         margin: 10px;
         padding: 2%;
         //border-left: #17252A 3px solid;
-        border: 3px solid #17252A;
-        border-radius: 1%;
+        border: 1px solid #17252A;
+        border-radius: 16px;
         align-items: center;
         justify-content: flex-start;
         .faqs--container__desc {
